frontend/test/should_pass/nodeedgebyuniquewithtype.grg
#using "nodeedgebynameuniquemodel.gm"

rule rn : (N)
{
	-e:Edge->;
	if { nodeByUnique(0, Node)==source(e); }
	if { nodeByUnique(0, N)==source(e); }
	if { uniqueof(nodeByUnique(0, Node))==0; }
	if { uniqueof(nodeByUnique(0, N))==0; }
	
	modify {
	---
		def n:N;
		eval {
			yield n = nodeByUnique(42, N);
		}
		return(nodeByUnique(0, N));
		exec ( { yield n = nodeByUnique(uniqueof(nodeByUnique(42, Node)), N) } );
	}
}

rule re : (E)
{
	-e:Edge->;
	if { edgeByUnique(0, AEdge)==e; }
	if { edgeByUnique(0, Edge)==e; }
	if { edgeByUnique(0, E)==e; }
	if { uniqueof(edgeByUnique(0, AEdge))==0; }
	if { uniqueof(edgeByUnique(0, Edge))==0; }
	if { uniqueof(edgeByUnique(0, E))==0; }
	
	modify {
	---
		def -n:E->;
		eval {
			yield n = edgeByUnique(42, E);
		}
		return(edgeByUnique(0, E));
		exec ( { yield n = edgeByUnique(uniqueof(edgeByUnique(42, AEdge)), E) } );
	}
}

