frontend/test/should_fail/matchclassimplementsdefnondef_001.grg
#using "matchclassmodel.gm"

test t() implements shared
{
	n:Node;
}

match class shared
{
	def n:Node;
}
